# poetry-to-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
