[tool.poetry]
name = "hello-world"
authors = ["Yoan Blanc <yoan@dosimple.ch>"]
version = "0.1.0"
description = "A simple Flask web application served via gunicorn"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

Flask = ">=1.1,<1.2"
whitenoise = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
